--- a/report-generator/templates/hello-world.html
+++ b/report-generator/templates/hello-world.html
@@ -4,6 +4,7 @@
         
     </title>
     <body>
-        <h1>hello {{name}}!</h1> 
+        <h1>hello {{name}}!</h1><br>
+        <a><img src="http://127.0.0.1:5000/img/psample" width="200" height="267"></a>
     </body>
 </html>
