try to render image to jinja

--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -5,6 +5,7 @@
     </title>
     <body>
         <h1>hello {{name}}!</h1><br>
-        <a><img src="http://127.0.0.1:5000/images/chart1" width="200" height="267"></a>
+        <!-- <a><img src="http://127.0.0.1:5000/images/chart1" width="200" height="267"></a> -->
+        <a><img src="{{image}}" width="200" height="267"></a> 
     </body>
 </html>
