--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+    </head>
     <title>
-        
+        <p>sample</p>
     </title>
     <body>
         <h1>hello {{name}}!</h1><br>
-        <!-- <a><img src="http://127.0.0.1:5000/images/chart1" width="200" height="267"></a> -->
-        <a><img src="{{image}}" width="200" height="267"></a> 
+        <a><img src="http://0.0.0.0:5000/images/chart1" width="200" height="267"></a>
+        <!-- <a><img src="{{image}}" width="200" height="267"></a>  -->
     </body>
 </html>
