--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-    </head>
-    <title>
-        <p>sample</p>
-    </title>
     <body>
-        <h1>hello {{name}}!</h1><br>
-        <a><img src="http://0.0.0.0:5000/images/chart1" width="200" height="267"></a>
-        <!-- <a><img src="{{image}}" width="200" height="267"></a>  -->
+        <h1 class="center-txt">{{title}}</h1><br>
+        {% for sensor in sensors %}
+            <img src="http://0.0.0.0:5000/sensor/{{sensor}}" alt={{sensor}} class="center"><br>
+        {% endfor %}
     </body>
 </html>
