--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1 class="center-txt">{{title}}</h1><br>
-        <h1 class="center-txt">from: {{frm}} to {{to}}</h1>
+        <h1 class="center-txt">{{variables['title']}}</h1><br>
+        <h1 class="center-txt">from: {{variables['frm']}} to {{variables['to']}}</h1>
         {% for sensor in variables['sensors'] %}
             <img src="http://3.236.45.125:5000/sensor/{{sensor}}/{{variables['frm']}}/{{variables['to']}}" alt={{sensor}} class="center"><br>
         {% endfor %}
