--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -5,6 +5,7 @@
         <h1 class="center-txt">from: {{variables['frm']}}</h1> 
     	<h1 class="center-txt">to: {{variables['to']}}</h1>
         {% for sensor in variables['sensors'] %}
+        	<h1>{{sensor}}</h1>
             <img src="http://3.236.45.125:5000/sensor/{{sensor}}/{{variables['frm']}}/{{variables['to']}}" alt={{sensor}} class="center"><br>
         {% endfor %}
     </body>
