--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1 class="center-txt">{{variables['title']}}</h1><br>
-        <h1 class="center-txt">from: {{variables['frm']}}</h1> 
+        <h1 class="center-txt">{{variables['title']}} GMT</h1><br>
+        <h1 class="center-txt">from: {{variables['frm']}} GMT</h1> 
     	<h1 class="center-txt">to: {{variables['to']}}</h1>
         {% for sensor in variables['sensors'] %}
-        	<h1>{{sensor}}</h1>
+        	<h1 class="center-txt">{{sensor}}</h1><br>
             <img src="http://3.236.45.125:5000/sensor/{{sensor}}/{{variables['frm']}}/{{variables['to']}}" alt={{sensor}} class="center"><br>
         {% endfor %}
     </body>
