--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -9,7 +9,7 @@
     	<h1 class="center-txt">to: {{variables['to']}}</h1>
         {% for sensor in variables['sensors'] %}
         	<h1 class="center-txt">{{sensor}}</h1><br>
-        	<img src="{{ url_for('static',filename='images/{{sensor}}.png') }} class="center""><br>
+        	<img src="{{ url_for('static',filename='images/{{sensor}}.png') }}"  class="center"><br>
             <!-- <img src="http://3.236.45.125:5000/sensor/{{sensor}}/{{variables['frm']}}/{{variables['to']}}" alt={{sensor}} class="center"><br> -->
         {% endfor %}
     </body>
