--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -2,6 +2,35 @@
 <html>
 <head>
 	<!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}"> -->
+	<style type="text/css">
+		@page {
+    size: A4;   /* auto is the initial value */
+    margin: 2.5cm 2.5cm 2.5cm 2.5cm;
+    marks: crop cross;
+}
+
+header nav, footer {
+    display: none;
+    }
+    
+body {
+    font: 12pt Georgia, "Times New Roman", Times, serif;
+    line-height: 1.3;
+    }
+    
+.center-txt {
+    padding: 10px;
+    text-align: center;
+  }
+.center {
+    padding: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
+
+	</style>
 </head>
     <body>
         <h1 class="center-txt">{{variables['title']}}</h1><br>
