--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -34,6 +34,13 @@ body {
     width: 1000px;
     height: 1000px;
     border: 5px solid black;
+    position: relative;
+}
+
+.div-ph{
+    width: 150px;
+    height: 150px;
+    overflow:auto;
 }
 
 	</style>
