--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -41,6 +41,29 @@ body {
     width: 150px;
     height: 150px;
     overflow:auto;
+    position: absolute;
+    bottom: 0px;
+}
+.div-tb{
+    width: 150px;
+    height: 150px;
+    overflow:auto;
+    position: absolute;
+    bottom: 0px;
+}
+.div-temp{
+    width: 150px;
+    height: 150px;
+    overflow:auto;
+    position: absolute;
+    bottom: 0px;
+}
+.div-do{
+    width: 150px;
+    height: 150px;
+    overflow:auto;
+    position: absolute;
+    bottom: 0px;
 }
 
 	</style>
