--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -42,21 +42,21 @@ body {
     height: 150px;
     overflow:auto;
     position: absolute;
-    bottom: 0px;
+    top: 0px;
 }
 .div-tb{
     width: 150px;
     height: 150px;
     overflow:auto;
     position: absolute;
-    bottom: 0px;
+    right: 0px;
 }
 .div-temp{
     width: 150px;
     height: 150px;
     overflow:auto;
     position: absolute;
-    bottom: 0px;
+    left: 0px;
 }
 .div-do{
     width: 150px;
