--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -56,7 +56,7 @@ body {
     height: 300px;
     overflow:auto;
     position: absolute;
-    left: 0px;
+    bottom: 0px;
 }
 .div-do{
     width: 300px;
@@ -64,6 +64,7 @@ body {
     overflow:auto;
     position: absolute;
     bottom: 0px;
+    right: 0px;
 }
 
 	</style>
