--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -34,7 +34,7 @@ body {
     width: 1000px;
     height: 1000px;
     border: 5px solid black;
-    position: absolute;
+    position: relative;
 }
 
 .div-ph{
