--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -43,6 +43,7 @@ body {
     overflow:auto;
     top: 0px;
     border: 5px solid black;
+    position: absolute;
 }
 .div-tb{
     width: 400px;
@@ -50,6 +51,7 @@ body {
     overflow:auto;
     right: 0px;
     border: 5px solid black;
+    position: absolute;
 }
 .div-temp{
     width: 400px;
@@ -57,6 +59,7 @@ body {
     overflow:auto;
     bottom: 0px;
     border: 5px solid black;
+    position: absolute;
 }
 .div-do{
     width: 400px;
@@ -65,6 +68,7 @@ body {
     bottom: 0px;
     right: 0px;
     border: 5px solid black;
+    position: absolute;
 }
 
 	</style>
