--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -20,9 +20,13 @@ body {
 .center-txt {
     padding: 10px;
     text-align: center;
-    position: absolute;
   }    
 
+.title {
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+  }    
 .container {
     width: 1000px;
     height: 1000px;
@@ -73,7 +77,7 @@ body {
         <div class="container">
         {% for sensor in variables['sensors'] %}
         	<div class="div-{{sensor}}">
-	        	<h1 class="center-txt">{{sensor}}</h1>
+	        	<h1 class="title">{{sensor}}</h1>
 	        	<img src="http://{{variables['host']}}/sensor/{{sensor}}" alt={{sensor}} class="center-img">
         	</div>
         {% endfor %}
