--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -24,8 +24,9 @@ body {
 
 .title {
     padding: 10px;
-    text-align: center;
-    position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	position: relative;
   }    
 .container {
     width: 1000px;
