--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -27,9 +27,7 @@ body {
   }    
 
 .title {
-    margin-left: auto;
-    margin-right: auto;
-	transform: translateX(-50%);
+	text-align: center;
 	position: relative;
   }    
 .container {
