--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -75,8 +75,8 @@ body {
 </head>
     <body>
         <h1 class="center-txt">{{variables['title']}}</h1><br>
-        <h1 class="center-txt">from: {{variables['frm']}} GMT</h1> 
-    	<h1 class="center-txt">to: {{variables['to']}} GMT</h1>
+        <h1 class="center-txt">from: {{variables['frm']}}</h1> 
+    	<h1 class="center-txt">to: {{variables['to']}}</h1>
         <div class="container">
         {% for key, value in variables['sensors'].items() %}
         	<div class="div-{{key}}">
