--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -23,8 +23,10 @@ body {
   }
 
 .image{
-	position: absolute;
-	align-items: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
   }    
 
 .title {
