--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -23,10 +23,12 @@ body {
   }
 
 .image{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
+	width: 300px;
+	height: 200px;
+	top: 50%;
+	left: 50%;
+	margin-left: -150px;
+	margin-top: -100px;
   }    
 
 .title {
