--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -25,8 +25,10 @@ body {
 .image{
 	width: 300px;
 	height: 200px;
-	top: 50%;
-	left: 50%;
+	margin-top: auto;
+	margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
   }    
 
 .title {
