--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -25,10 +25,10 @@ body {
 .image{
 	width: 300px;
 	height: 200px;
-	margin-top: auto;
-	margin-bottom: auto;
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    vertical-align: middle;
   }    
 
 .title {
