--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -40,7 +40,7 @@ body {
 .container {
     width: 1000px;
     height: 1000px;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     position: relative;
 }
 
@@ -49,7 +49,7 @@ body {
     height: 490px;
     overflow:auto;
     top: 0px;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     position: absolute;
 }
 .div-tb{
@@ -57,7 +57,7 @@ body {
     height: 490px;
     overflow:auto;
     right: 0px;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     position: absolute;
 }
 .div-temp{
@@ -65,7 +65,7 @@ body {
     height: 490px;
     overflow:auto;
     bottom: 0px;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     position: absolute;
 }
 .div-do{
@@ -74,7 +74,7 @@ body {
     overflow:auto;
     bottom: 0px;
     right: 0px;
-    border: 5px solid black;
+    /*border: 5px solid black;*/
     position: absolute;
 }
 
