--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -38,7 +38,7 @@ body {
 .container {
     width: 1000px;
     height: 1000px;
-    /*border: 5px solid black;*/
+    border: 5px solid black;
     position: relative;
 }
 
@@ -47,7 +47,7 @@ body {
     height: 490px;
     overflow:auto;
     top: 0px;
-    /*border: 5px solid black;*/
+    border: 5px solid black;
     position: absolute;
 }
 .div-tb{
@@ -55,7 +55,7 @@ body {
     height: 490px;
     overflow:auto;
     right: 0px;
-    /*border: 5px solid black;*/
+    border: 5px solid black;
     position: absolute;
 }
 .div-temp{
@@ -63,7 +63,7 @@ body {
     height: 490px;
     overflow:auto;
     bottom: 0px;
-    /*border: 5px solid black;*/
+    border: 5px solid black;
     position: absolute;
 }
 .div-do{
