--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
+	<!-- <style type="text/css">
 		@page {
     size: A4;   /* auto is the initial value */
     margin: 1cm 1cm 1cm 1cm;
@@ -76,7 +76,7 @@ body {
     position: absolute;
 }
 
-	</style>
+	</style> -->
 </head>
     <body>
         <h1 class="center-txt">{{variables['title']}}</h1><br>
