--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -23,7 +23,7 @@ body {
   }
 
 .image{
-	padding-top: 30px;
+	/* padding-top: 30px; */
     display: block;
     margin-left: auto;
     margin-right: auto;
