--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -90,5 +90,6 @@ body {
         	</div>
         {% endfor %}
         </div>
+        <h1 class="center-txt">------------------------- end -------------------------</h1>
     </body>
 </html>
