--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -12,8 +12,8 @@ header nav, footer {
     display: none;
     }
     
-body {
-    font: 12pt serif;
+h1 {
+    font-family: "Times New Roman", Times, serif;
     line-height: 1.3;
     }
     
