--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -20,6 +20,8 @@ h1 {
 .center-txt {
     padding: 10px;
     text-align: center;
+    font-family: "Times New Roman", Times, serif;
+    line-height: 1.3;
   }
 
 .image{
