--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -85,6 +85,9 @@ header nav, footer {
         	</div>
         {% endfor %}
         </div>
+        <div>
+            
+        </div>
         <p class="center-txt">-------------------------------------------------- end --------------------------------------------------</p>
     </body>
 </html>
