--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -1,77 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
-		@page {
+<style type="text/css">
+
+    @media print {
+    .new-page {
+        page-break-before: always;
+    }
+    }
+    @page {
     size: A4;   /* auto is the initial value */
     margin: 1cm 1cm 1cm 1cm;
     marks: crop cross;
-}
-
-header nav, footer {
-    display: none;
     }
-    
-.center-txt {
-    padding: 10px;
-    text-align: center;
-  }
 
-.image{
-	/* padding-top: 30px; */
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    vertical-align: middle;
-  }    
+    header nav, footer {
+        display: none;
+        }
+        
+    .center-txt {
+        padding: 10px;
+        text-align: center;
+    }
 
-.title {
-	padding-top: 20px;
-	text-align: center;
-	position: relative;
-  }    
-.container {
-    width: 1000px;
-    height: 1000px;
-    /* border: 5px solid black; */
-    position: relative;
-}
+    .image{
+        /* padding-top: 30px; */
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        vertical-align: middle;
+    }    
 
-.div-ph{
-    width: 490px;
-    height: 490px;
-    overflow:auto;
-    top: 0px;
-    /* border: 5px solid black; */
-    position: absolute;
-}
-.div-tb{
-    width: 490px;
-    height: 490px;
-    overflow:auto;
-    right: 0px;
-    /* border: 5px solid black; */
-    position: absolute;
-}
-.div-temp{
-    width: 490px;
-    height: 490px;
-    overflow:auto;
-    bottom: 0px;
-    /* border: 5px solid black; */
-    position: absolute;
-}
-.div-do{
-    width: 490px;
-    height: 490px;
-    overflow:auto;
-    bottom: 0px;
-    right: 0px;
-    /*border: 5px solid black;*/
-    position: absolute;
-}
+    .title {
+        padding-top: 20px;
+        text-align: center;
+        position: relative;
+    }    
+    .container {
+        width: 1000px;
+        height: 1000px;
+        /* border: 5px solid black; */
+        position: relative;
+    }
 
-	</style>
+    .div-ph{
+        width: 490px;
+        height: 490px;
+        overflow:auto;
+        top: 0px;
+        /* border: 5px solid black; */
+        position: absolute;
+    }
+    .div-tb{
+        width: 490px;
+        height: 490px;
+        overflow:auto;
+        right: 0px;
+        /* border: 5px solid black; */
+        position: absolute;
+    }
+    .div-temp{
+        width: 490px;
+        height: 490px;
+        overflow:auto;
+        bottom: 0px;
+        /* border: 5px solid black; */
+        position: absolute;
+    }
+    .div-do{
+        width: 490px;
+        height: 490px;
+        overflow:auto;
+        bottom: 0px;
+        right: 0px;
+        /*border: 5px solid black;*/
+        position: absolute;
+    }
+
+</style>
 </head>
     <body>
         <h1 class="center-txt">{{variables['title']}}</h1><br>
@@ -85,8 +91,9 @@ header nav, footer {
         	</div>
         {% endfor %}
         </div>
+        <br class="new-page">
         <div>
-            
+            <p>this is a new page</p>
         </div>
         <p class="center-txt">-------------------------------------------------- end --------------------------------------------------</p>
     </body>
