new table added

--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -91,10 +91,7 @@
         	</div>
         {% endfor %}
         </div>
-        <br class="new-page">
-        <div>
-            <p>this is a new page</p>
-        </div>
+        <p class="new-page">this is a new page</p>
         <p class="center-txt">-------------------------------------------------- end --------------------------------------------------</p>
     </body>
 </html>
