--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -6,7 +6,7 @@
     @media print {
     .new-page {
         page-break-before: always;
-        padding: 20px;
+        padding-top: 30px;
     }
     }
     @page {
