--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -21,7 +21,7 @@
                 
                 
             .title {
-                padding-top: 100px;
+                padding: 1000px;
                 text-align: center;
             }
 
