--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -107,7 +107,7 @@
             {% for item in variables['ph'] %}
                 <tr>
                     <td>{{ item['time'] }}</td>
-                    <td>{% item['value'] %}</td>
+                    <td>{{ item['value'] }</td>
                 </tr>
             {% endfor %}
         </table>
