--- a/report-generator/templates/report.html
+++ b/report-generator/templates/report.html
@@ -15,9 +15,13 @@
             marks: crop cross;
             }
 
-            header nav, footer {
+            /* header nav, footer {
                 display: none;
-                }
+                } */
+
+            table{
+                width: 100%;
+            }
                 
                 
             .title {
